# FairMQPlugin_example

./: CMakeLists.txt  ExamplePlugin.cxx  ExamplePlugin.h.in  README.md
